# itmo-application-programming

./: .gitignore  README.md
labs/lab-1/code/: form-success.html  index.html  input.txt  user-not-found.html
labs/lab-1/code/css/: style.css
labs/lab-1/code/php/: database.php  form.php
labs/lab-1/tex/: main.tex
labs/lab-1/tex/puml/: database.puml
labs/lab-2-1/code/delphi/: Lab2.dpr  Lab2.dproj  Lab2.res  Unit1.dfm  Unit1.pas
labs/lab-2-1/code/vba/: Lab2.sln
labs/lab-2-1/code/vba/Lab2/: Form1.Designer.vb  Form1.vb
labs/lab-2-2/code/: Lab3.dpr  Lab3.dproj  Lab3.dproj.local  Lab3.identcache  Lab3.res  Unit2.dfm  Unit2.pas
labs/lab-2-2/tex/: main.tex
labs/lab-2/tex/: main.tex
labs/lab-3/code/task-2/client/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
labs/lab-3/code/task-2/client/src/: data_table.cpp  data_table.hpp  main.cpp  models.cpp  models.hpp  requests.cpp  requests.hpp  results_table.cpp  results_table.hpp
labs/lab-3/code/task-2/server/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
labs/lab-3/code/task-2/server/src/: main.cpp  math.cpp  math.hpp  models.cpp  models.hpp
labs/lab-3/tex/: main.tex
labs/lab-4/code/: CMakeLists.txt  CMakeUserPresets.json  cert.pem  compile_commands.json  conanfile.txt  dh.pem  key.pem
labs/lab-4/code/src/: certificates.cpp  certificates.hpp  main.cpp  main_window.cpp  main_window.hpp  server.cpp  server.hpp
labs/lab-4/tex/: main.tex
labs/lab-5/code/task-1/lib/: main.dart
labs/lab-5/code/task-2/: pubspec.yaml
labs/lab-5/code/task-2/lib/: main.dart
labs/lab-5/tex/: main.tex
(+1 files in other folders)
